# tex-project

./: .gitignore  notes.txt  pyproject.toml
label_text/: README.md  app.py  clean.py  hello.py  notebook.ipynb  train.py
label_text/data/: raw.csv  train.csv
label_text/models/: model.joblib
